--- a/Projeto - Sexta/index.html
+++ b/Projeto - Sexta/index.html
@@ -16,12 +16,15 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="html/login.html">Intranet</a>
-        <a href="pages/sobreNos.html">Sobre Nós</a>
+        <a href="#">Sobre nós</a>
         </nav>
     </header>
     <main>
-        <h2>Hospede-se nesse final de ano conosco!</h2>
-        <h3>Hospede-se conosco com antecedência e garanta os melhores quartos com os melhores preços!</h3>
+        <div class="boas-vindas">
+            <h2>Bem-vindo ao Hotel Acapulco!</h2>
+            <h3>Hospede-se conosco e aproveite momentos de conforto e luxo.</h3>
+        </div>  
+    
         <div id="catalogo">
             <div class="produtos-container">
                 <!-- Quarto Standard -->
@@ -58,8 +61,9 @@
                 </div>
             </div>
         </div>
-    </main>
-    
+
+
+    </main>        
     <footer>
         <p>&copy; 2024 Hotel Acapulco. Todos os direitos reservados.</p>
     </footer>
