--- a/Projeto - Sexta/html/intranet.html
+++ b/Projeto - Sexta/html/intranet.html
@@ -17,7 +17,7 @@
     </div>
     <nav>
         <a href="../index.html">Home</a>
-        <a href="pages/sobreNos.html">Sobre Nós</a>
+        <a href="../html/sobreNos.html">Sobre Nós</a>
     </nav>
     </header>
 
@@ -39,7 +39,7 @@
         <ul id="listaReservas"></ul>
     </main>
 
-    <script src="../scripts/script.js"></script>
+    <script src="../scripts/intranet.js"></script>
 
 </body>
 </html>
