--- a/Projeto - Sexta/html/login.html
+++ b/Projeto - Sexta/html/login.html
@@ -3,34 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Hotel Acalpuco</title>
+    <title>Login - Hotel Acapulco</title>
     <link rel="stylesheet" href="../styles/login.css">
     <link rel="icon" href="../images/icons/LOGO-HOTEL.png-16x16.ico">
 </head>
 <body>
   <div class="form">
     <img src="../images/LOHO HOTEL 0 (1).png" alt="Logo">
-  <div class="title">Bem-Vindo(a) </div>
-  <div class="subtitle">Hotel Acapulco - Intranet</div>
-  <div class="subtitle">Sistema Interno de Cadastro de Reservas</div>
+    <div class="title">Bem-Vindo(a)</div>
+    <div class="subtitle">Hotel Acapulco - Intranet</div>
+    <div class="subtitle">Sistema Interno de Cadastro de Reservas</div>
 
-  <form action="../html/intranet.html" method="get"> <!-- Colocando um formulário -->
-  
-  <div class="input-container ic2">
-    <input id="lastname" class="input" type="text" placeholder=" " required /> <!-- Adicionando required -->
-    <div class="cut"></div>
-    <label for="lastname" class="placeholder">Usuário</label>
+    <!-- Adicionado ID ao formulário -->
+    <form id="loginForm">
+      <!-- Campo de Usuário com autocomplete desativado -->
+      <div class="input-container ic2">
+        <input id="username" class="input" type="text" autocomplete="off" placeholder=" " required />
+        <div class="cut"></div>
+        <label for="username" class="placeholder">Usuário</label>
+      </div>
+
+      <!-- Campo de Senha ocultando os caracteres -->
+      <div class="input-container ic2">
+        <input id="password" class="input" type="password" autocomplete="off" placeholder=" " required />
+        <div class="cut cut-short"></div>
+        <label for="password" class="placeholder">Senha</label>
+      </div>
+
+      <button type="submit" class="submit">Acessar</button>
+    </form> 
   </div>
 
-  <div class="input-container ic2">
-    <input id="email" class="input" type="text" placeholder=" " required /> <!-- Adicionando required -->
-    <div class="cut cut-short"></div>
-    <label for="email" class="placeholder">Senha</label>
-  </div>
-  
-  <button type="submit" class="submit">Acessar</button>
-  </form> <!-- Fechando o formulário -->
- 
-</div>
+  <script src="../scripts/login.js"></script>
 </body>
 </html>
