--- a/Projeto - Sexta/index.html
+++ b/Projeto - Sexta/index.html
@@ -68,7 +68,7 @@
             <div class="promocao-texto">
                 <h2>SEJA UM CLIENTE VIP</h2>
                 <p>Já imaginou ser um cliente exclusivo do Hotel Acapulco e receber vantagens únicas como descontos, upgrades e serviços personalizados? Faça parte do nosso programa VIP e viva uma experiência ainda mais especial conosco.</p>
-                <button onabort="window.location.href='https://forms.gle/ZGXBPdaxWzUfkyWv8';">Cadastre-se agora</button>
+                <a href="https://forms.gle/m4g1bfpoj4vjWt7e9" class="button">Cadastre-se agora</a>
             </div>
             <div class="promocao-imagem">
                 <img src="images/cliente_vip.jpg" alt="Cliente VIP do Hotel">
@@ -83,16 +83,17 @@
                     <h2>Hotel Acapulco</h2>
                 </div>
                 <ul>
-                    <li><strong>Endereço:</strong> Avenida do Limoeiro, 234, Praia Encantada - Fernando de Noronha</li>
+                    <li><strong>Endereço:</strong> Avenida do Limoeiro, 234, Praia Encantada - Tangamandápio</li>
                     <li><strong>Email:</strong> contato@hotelacapulco.com</li>
                     <li><strong>Telefone:</strong> (11) 99999-9999</li>
                 </ul>
             </div>
             <div class="reserva-acao">
                 <h3>Faça sua reserva agora mesmo!</h3>
-                <button onclick="window.location.href='./html/formulario.html'">Formulário de Reserva</button>
+                <!-- Botão ajustado para redirecionar ao site -->
+                <a href="https://forms.gle/W7j5w2ztcxpBrAB17" class="button">Formulário de Reserva</a>
             </div>
-        </div>           
+        </div>                        
     </main>  
     <footer>
         <p>&copy; 2024 Hotel Acapulco. Todos os direitos reservados.</p>
