--- a/Projeto - Sexta/html/intranet.html
+++ b/Projeto - Sexta/html/intranet.html
@@ -16,9 +16,8 @@
         <p>Sistema de Reserva de Quartos</p>
     </div>
     <nav>
-        <a href="../index.html">Home</a>
-        <a href="../html/sobreNos.html">Sobre Nós</a>
-    </nav>
+        <button id="logout-btn">Logout</button>
+        </nav>
     </header>
 
     <main>
